--- a/src/Home/Details/DetailRow/DetailRow.css
+++ b/src/Home/Details/DetailRow/DetailRow.css
@@ -44,6 +44,10 @@ cursor: pointer;
   color: gray;
   font-size: 0.9rem;
 }
+#city{
+  color: gray;
+  font-size: 0.9rem;
+}
 #verify {
   color: green;
 }
