--- a/src/Home/AddResouce/resources.css
+++ b/src/Home/AddResouce/resources.css
@@ -1,75 +1,88 @@
 .resource {
-    flex: 0.7;
-    height: 97.5vh;
-    overflow: scroll;
-    padding-bottom: 20px;
+  flex: 0.7;
+  overflow: scroll;
+  width: 100%;
+  padding-bottom: 20px;
+  background-color: #f6f6f6;
+  overflow-x: hidden;
+}
+
+@media  screen and (max-width:475px) {
+  .details::-webkit-scrollbar {
+    display: none;
+  }
+  .details {
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+  }  
+}
+
+.header {
+  z-index: 1;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  text-align: center;
+  top: 0;
+  width: 95.5%;
+  padding: 20px;
+}
+#input {
+  padding: 5px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+form > input {
+  background-color: #f1f1f1;
+}
+.details-body {
+  padding: 20px;
+  background-color: #f1f1f1;
+}
+.no-data {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  font-size: 2rem;
+  text-align: center;
+  filter: drop-shadow(0 0 0.2rem crimson);
+}
+#disclaimer {
+  filter: drop-shadow(0 0 0.2rem crimson);
+}
+.blocks {
+  display: flex;
+}
+.blocks > div {
+  flex: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  text-align: justify;
+}
+.blocks > div > img {
+  height: 200px;
+  width: 100%;
+}
+.span {
+  color: red;
+}
+.self {
+  margin: 10px;
+}
+@media only screen and (max-width: 1000px) {
+  .header {
+    width: 90%;
     background-color: #f6f6f6;
   }
-  .header {
-    z-index: 1;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    position: sticky;
-    text-align: center;
-    top: 0;
-    width: 95.5%;
-    padding: 20px;
-  }
-  #input {
-    padding: 5px;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-  }
-  form > input {
-    background-color: #f1f1f1;
-  }
-  .details-body {
-    padding: 20px;
-  }
   .no-data {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-    font-size: 2rem;
-    text-align: center;
-    filter: drop-shadow(0 0 0.2rem crimson);
-  }
-  #disclaimer {
-    filter: drop-shadow(0 0 0.2rem crimson);
+    font-size: 1rem;
   }
   .blocks {
-    display: flex;
+    flex-direction: column;
   }
-  .blocks > div {
-    flex: 0.5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    text-align: justify;
-  }
-  .blocks > div > img {
-    height: 200px;
-    width: 100%;
-  }
-  .span {
-    color: red;
-  }
-  .self {
-    margin: 10px;
-  }
-  @media only screen and (max-width: 1000px) {
-    .header {
-      width: 90%;
-    }
-    .no-data {
-      font-size: 1rem;
-    }
-    .blocks {
-      flex-direction: column;
-    }
-  }
-  
+}
