--- a/src/Home/AddResouce/resources.css
+++ b/src/Home/AddResouce/resources.css
@@ -43,3 +43,29 @@ form > input {
     background-color: #f6f6f6;
   }
 }
+
+
+body{
+  background-color: #1db096;
+  padding: 0;
+  display: flex;
+}
+
+.button{
+  box-sizing: border-box;
+  font-weight: 500;
+  font-size: 90%;
+  height: 5%;
+  width: 30%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin-left: 35%;
+  margin-top: 4%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #1db096;
+  border-radius: 20px;
+  box-shadow: 5px 10px 10px rgba(24,139,119, 0.02);
+}
